<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CryptoCast Client</string>
    <string name="menu_settings">Settings</string>
    <string name="connect_button">Connect</string>
    <string name="hostname_hint">Hostname</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="wifi_mode">WIFI data only</string>
    <string name="traffic_overview">Traffic overview</string>
    <string name="ok">OK</string>
    <string name="preference_server_name" />
    <string name="saved_server_main" />
    <string name="title_activity_key_chooser">KeyChooser</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_stream">StreamViewer</string>
    <string name="invalid_hostname_text">This hostname is not valid, please check your written name.</string>
    <string name="port_hint">Port</string>
    <string name="content_descr_imagemain">Cryptocast Logo</string>
    <string name="invalid_port">Please give me a valid port.</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_media_player">MediaPlayer</string>
    <string name="server_history">Server History</string>
    <string name="help"><b>Help</b></string>
    <string name="help_text1"><li>To connect to a server you have to fill in the host name and port you want to connect to, then press connect.</li> 
    	</string>
    <string name="help_text2"><li>If the connection was successful, you will be asked to choose a key file from your directory.</li> </string>
    <string name="help_text3"><li>If you choose an authorized key file, you will be directed to the stream viewer.</li></string>
    <string name="help_text4"><li>You can view the servers you already connected with in options and modify or delete them with a long touch.</li></string>
    <string name="help_text5"><li>You can get back to the main screen at any time by using the Back button.</li></string>
    <string name="show_visited">Show visited</string>
    <string name="authors">Authors:\n Mohammed Abu Jayyab,\n Niklas Baumstark,\n Tobias Gräf,\n Amrei Loose,\n Christoph Michel</string>
    <string name="icons">All icons from\n <a href="http://www.visualpharm.com/">http://www.visualpharm.com/</a> </string>
    

</resources>