<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".HelpActivity" >

	<TextView
		android:id="@+id/View01"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="10dp"
		android:text="@string/help"
		android:textSize="30sp" />

	<View
		android:id="@+id/Viewline2"
		android:layout_width="match_parent"
		android:layout_height="2dp"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/View01"
		android:background="@android:color/darker_gray" />

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical" 
		android:layout_below="@+id/Viewline2" 
		android:layout_margin="2dp">

		<TextView
			android:id="@+id/textView1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView
			android:id="@+id/textView2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/help_text1"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView
			android:id="@+id/textView3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/help_text2"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView
			android:id="@+id/textView4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/help_text3"
			android:textAppearance="?android:attr/textAppearanceMedium" />
		
		<TextView
			android:id="@+id/textView5"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/help_text4"
			android:textAppearance="?android:attr/textAppearanceMedium" />
		
		<TextView
			android:id="@+id/textView6"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/help_text5"
			android:textAppearance="?android:attr/textAppearanceMedium" />
	</LinearLayout>

</RelativeLayout>